--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,36 +1,12 @@
-body {
-  background: cyan;
-  text-align: center;
 
-  .green {
-    color: green;
-  }
-
-  .big {
-    font-size: 2.5vw;
-  }
-
-  .small {
-    font-size: 1.5vw;
-  }
-
-  .verybig {
-    font-size: 3.5vw;
-    color: red;
-  }
-
-  .fontFamily {
-    font-family: tahoma;
-    font-weight: 700;
-  }
+// body {
+//   text-align: center;
+//
+//   .flex {
+//     display: flex;
+//     justify-content: space-around;
+//   }
+// }
 
 
-  // .wrapper {
-  //   width: 30vw;
-  //   height: 30vw;
-  //   background-image: url(../images/canyon.jpg);
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   margin: 0 auto;
-  // }
-}
+// manageTask
