commit at second route exercise

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,7 @@
 // }
 
 
-// manageTask
+// manageTask css #############################################################
+.setToDone {
+  text-decoration-line: line-through !important;
+}
